# glowasia-automation

./: README.md  SPEC.md  index.html  package-lock.json  package.json
docs/: AUTOMATION.md  CREDENTIALS.md  DEVELOPMENT.md  SETUP.md  TROUBLESHOOTING.md
scripts/: package-lock.json  package.json  playwright-runner.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  cred_db.rs  lib.rs  main.rs  update.rs
src-tauri/src/automation/: auto_pilot.rs  fulfillment.rs  mod.rs  monitor.rs  notifier.rs
src-tauri/src/browser/: cj.rs  etsy.rs  lazada.rs  manager.rs  midtrans.rs  mod.rs  shopee.rs  shopify.rs  stealth.rs  tiktok.rs  tokopedia.rs  utils.rs
src-tauri/src/storage/: credentials.rs  db.rs  mod.rs
src/components/: ActivityLog.tsx  Dashboard.tsx  ProductForm.tsx  ProductImport.tsx  Products.tsx  Reports.tsx  Settings.tsx  Settings.tsx.bak  StatusBar.tsx  WhatsNew.tsx
