[package]
name = "glowasia-automation"
version = "1.0.0"
description = "GLOWASIA Dropshipping Copilot - 100% Auto-Pilot E-commerce Automation"
authors = ["GLOWASIA"]
edition = "2021"

[lib]
name = "glowasia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "glowasia-automation"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
hex = "0.4"
urlencoding = "2"
base64 = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "2"
directories = "5"
hostname = "0.4"
playwright-rs = "0.12"
self_update = "0.41"
once_cell = "1"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
